onchange na inputach

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="grid-container wg">
-        <input type="text" value="Imię:" class="wg t-a-c" id="name">
-        <input type="text" value="Nazwisko:" class="wg t-a-c" id="sname">
+        <input type="text" value="Imię:" class="wg t-a-c" id="name" onchange="walidacja()">
+        <input type="text" value="Nazwisko:" class="wg t-a-c" id="sname" onchange="walidacja()">
     </div>
     
     <div class="grid-container2">
-        <input type="email" value="E-mail:" class="wg t-a-c" id="mail">
-        <input type="tel" value="Numer telefonu:" class="wg t-a-c" id="tel">
-        <input type="text" value="Wiadomość do sprzedającego:" class="wg t-a-c" id="info">
+        <input type="email" value="E-mail:" class="wg t-a-c" id="mail" onchange="walidacja()">
+        <input type="tel" value="Numer telefonu:" class="wg t-a-c" id="tel" onchange="walidacja()">
+        <input type="text" value="Wiadomość do sprzedającego:" class="wg t-a-c" id="info" onchange="walidacja()">
     </div>
     
     <div class="t-a-c">
